--- a/example/src/main/res/menu/menu_main.xml
+++ b/example/src/main/res/menu/menu_main.xml
@@ -12,4 +12,10 @@
     <item
         android:id="@+id/async_uris"
         android:title="Async Uris"/>
+    <item
+        android:id="@+id/take_photo"
+        android:title="拍照"/>
+    <item
+        android:id="@+id/pick_photo"
+        android:title="相册"/>
 </menu>
